--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.2",
-    "download": "^8.0.0",
+    "download": "^3.3.0",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
