--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.2",
-    "download": "^3.3.0",
+    "download": "^8.0.0",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
@@ -18,6 +18,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon server.js",
+    "devStart":"nomdom server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
